# Student-Records-Database-Connection-

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  wsgi.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml
app/: __init__.py  config.py
app/models/: __init__.py  example_model.py  student.py
app/repositories/: academic_record_repository.py  approved_student_repository.py  assignment_report_repository.py  dashboard_repository.py  database_health_repository.py  example_repository.py  student_repository.py  student_write_repository.py
app/routes/: health.py  main.py
app/security/: __init__.py  csrf.py
app/services/: academic_record_service.py  approved_student_service.py  assignment_report_service.py  dashboard_service.py  database_health_service.py  example_service.py  student_service.py  student_write_service.py
app/templates/: add_student.html  base.html  dashboard.html  delete_student.html  edit_student.html  index.html  records.html  reports.html  (+5 more)
docs/: README.md  architecture.md  assessor-setup.md  assignment-requirements.md  database-and-data.md  database-design.md  final-submission-checklist.md  how-unirecords-works.md  requirement-coverage.md  start-here.md  submission-checklist.md
logs/: README.md
migrations/: README.md  alembic.ini  env.py
scripts/: seed_database.py
tests/: conftest.py  test_approved_student_repository.py  test_approved_student_service.py  test_assignment_report_repository.py  test_assignment_report_service.py  test_database_health.py  test_models.py  test_repositories.py  test_routes.py  test_services.py  test_student_write_service.py
(+8 files in other folders)
