[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-records-database-connection"
version = "0.1.0"
description = "A three-layer Flask student records application with PostgreSQL and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Daniel Cho"}]
dependencies = [
    "Flask>=3.0,<4.0",
    "Flask-Migrate>=4.0,<5.0",
    "Flask-SQLAlchemy>=3.1,<4.0",
    "SQLAlchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.0,<2.0",
    "Faker>=20.0,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-flask>=1.3,<2.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
    "black>=24.0,<25.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["docs*", "logs*", "migrations*", "scripts*", "tests*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
